--- a/metrics.ini
+++ b/metrics.ini
@@ -1508,85 +1508,158 @@ StatsY=SCREEN_TOP+16
 StatsOnCommand=halign,1;valign,0;zoom,0.65
 SkipY=_screen.h - 85
 
-
-
 [MusicWheel]
-ShowRoulette=false
-ShowPortal=false
-ShowRandom=false
-RandomPicksLockedSongs=false
-SortBPMDivision=10
-SortLengthDivision=60
-
-OnlyShowActiveSection=ThemePrefs.Get("MusicWheelStyle")=="IIDX"
-HideActiveSectionTitle=false
-
-# MusicWheel Commands
-ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) self:y(offsetFromCenter * _screen.h/15) end
-NumWheelItems=17
-MostPlayedSongsToShow=50
-
-# WheelItem Commands
-MusicWheelItemSortOnCommand=zoomy,0;accelerate,0.2;zoomy,1
-MusicWheelItemSortOffCommand=decelerate,0.2;zoomy,0
-
-# Highlight Commands
-HighlightOnCommand=%function(self) \
-	if DarkUI() then \
-		self:diffuseshift():effectcolor1(0.8,0.8,0.8,0.15):effectcolor2(0.1,0.1,0.1,0.15):effectclock("beatnooffset"):effectperiod(2) \
-	else \
-		self:diffuseshift():effectcolor1(0.8,0.8,0.8,0.15):effectcolor2(0.8,0.8,0.8,0.05):effectclock("beatnooffset"):effectperiod(2) \
-	end \
+SwitchSeconds=0.25
+ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
+	function GetZoom(offsetFromCenter) \
+		if offsetFromCenter >= 1 then \
+			return 0.75; \
+		end \
+		if offsetFromCenter <= -1 then \
+			return 0.75; \
+		end \
+		if math.abs(offsetFromCenter) > 0 and math.abs(offsetFromCenter) <1 then \
+			return (10.0-math.abs(offsetFromCenter)*2.5)/10; \
+		else \
+			return 1; \
+		end; \
+	end; \
+	function GetDistence(offsetFromCenter) \
+			return 0; \
+	end; \
+	local curve = 2.5; \
+	local WHEEL_3D_RADIUS = 220; \
+	local rotationx_radians = scale(offsetFromCenter,-numItems/2,numItems/2,-curve/2,curve/2); \
+	self:z( -200 + WHEEL_3D_RADIUS * math.cos(rotationx_radians) ); \
+	self:x( 0 - math.cos(offsetFromCenter/math.pi) ); \
+	self:y( WHEEL_3D_RADIUS * math.sin(rotationx_radians) ); \
+	self:rotationx( rotationx_radians * 180/math.pi );	--[[ to degrees end]] \
+	self:zoom( GetZoom(offsetFromCenter)/2.25); \
 end
-HighlightOffCommand=decelerate,0.2;diffusealpha,0
+HighlightOnCommand=diffuseramp;effectcolor2,Color.White;effectcolor1,color("1,1,1,0.2");effectclock,'beatnooffset';zoom,0.6;addz,14.5;addx,-1;
+NumWheelItems=17
 
+ShowRoulette=true
+ShowRandom=true
+
+[CourseWheel]
+#Fallback="MusicWheel"
+
+
+ModeMenuChoiceNames="AllCourses,Nonstop,Oni"
+# xxx: force nonstop on all courses? sounds lame but meh
+ChoiceAllCourses="sort,AllCourses;playmode,nonstop;mod,bar"
+ChoiceNonstop="sort,Nonstop;playmode,nonstop;mod,bar"
+ChoiceOni="sort,Oni;playmode,oni;mod,battery"
+ChoiceEndless="sort,Endless;playmode,endless;mod,bar"
+ChoiceSurvival="sort,Oni;playmode,oni;mod,lifetime"
+
+[NonstopWheel]
+Fallback="CourseWheel"
+ModeMenuChoiceNames="Nonstop"
+
+[OniWheel]
+Fallback="CourseWheel"
+ModeMenuChoiceNames="Oni"
+
+[OnlineMusicWheel]
 
 [MusicWheelItem]
-# hack to recolor song titles back EVERY SetCommand (i.e. a lot)
-SongNameSetCommand=%function(self,item) \
-	self:diffuse(ThemePrefs.Get("RainbowMode") and color("#0a141b") or Color.White) \
-	if item.Song and item.Song:GetMainTitle()=="DVNO" then self:diffuse(1,0.8,0,1) end \
-end
-SectionCollapsedSetCommand=%function(self) DiffuseEmojis(self) end
-SectionExpandedSetCommand=%function(self) DiffuseEmojis(self) end
+Fallback=WheelItemBase
+IconX=-186
+IconY=0
+IconOnCommand=
+#
+SectionCountX=-245
+SectionExpandedOnCommand=x,-195;addy,1.5;maxwidth,SCREEN_WIDTH*0.35;horizalign,left;shadowlengthy,2;zoom,0.9;
+SectionCollapsedOnCommand=x,-195;addy,1.5;maxwidth,SCREEN_WIDTH*0.35;horizalign,left;shadowlengthy,2;zoom,0.9;
+SectionCountOnCommand=zoom,0.3;addy,12;addx,19;shadowlengthy,2;diffusealpha,0.5;horizalign,right;
+#
+WheelNotifyIconX=-245
+WheelNotifyIconY=0
+WheelNotifyIconOnCommand=zoom,1
 
-CourseOnCommand=halign,0;x,WideScale(65, 104);maxwidth,WideScale(270,350);zoom,0.85
+RouletteX=-200
+RouletteY=0
+RouletteOnCommand=zoom,1.25;addy,1.5;rainbowscroll,true;shadowlengthy,2;horizalign,left;zoom,0.9;
 
-# ensure that very long titles don't go off-screen
-SectionExpandedOnCommand=maxwidth,WideScale(240,310)
-SectionCollapsedOnCommand=maxwidth,WideScale(240,310)
+RandomX=-200
+RandomY=0
+RandomOnCommand=zoom,1.25;addy,1.5;rainbowscroll,true;shadowlengthy,2;horizalign,left;zoom,0.9;
 
-SectionExpandedX=WideScale(150, 204)
-SectionCollapsedX=WideScale(150, 204)
-RouletteX=WideScale(150, 204)
-RandomX=WideScale(150, 204)
-PortalX=WideScale(150, 204)
+GradeP1X=-196
+GradeP1Y=-14
+GradeP2X=-196
+GradeP2Y=14
 
-SectionCountX=_screen.w/2 - WideScale(9, 10)
-SectionCountOnCommand=horizalign,right;zoom,0.75
-SectionCountSetCommand=%function(self) \
-	if ThemePrefs.Get("nice") > 0 and self:GetText()=="69" then \
-		self:settext("nice") \
+CourseX=-210
+CourseOnCommand=zoom,1.0;horizalign,left;shadowlengthy,2;maxwidth,SCREEN_WIDTH*0.31
+
+ModeX=-210
+ModeOnCommand=zoom,1.0;horizalign,left;shadowlengthy,2;maxwidth,SCREEN_WIDTH*0.31
+
+SortX=-210
+SortOnCommand=zoom,1.0;horizalign,left;shadowlengthy,2;maxwidth,SCREEN_WIDTH*0.31
+
+[TextBanner]
+TitleX=150
+TitleY=0
+TitleOnCommand=shadowlengthy,2;horizalign,left
+SubtitleX=90
+SubtitleY=0
+SubtitleOnCommand=shadowlengthy,2;horizalign,left
+ArtistX=90
+ArtistY=0
+ArtistOnCommand=shadowlengthy,2;horizalign,left
+ArtistPrependString=""
+AfterSetCommand=%function(self) \
+	local Title=self:GetChild("Title"); \
+	local Subtitle=self:GetChild("Subtitle"); \
+	local Artist=self:GetChild("Artist"); \
+	if Subtitle:GetText() == "" then \
+		(cmd(zoom,0.75;maxwidth,500;y,-9;x,-155;strokecolor,color("#000000")))(Title); \
+		(cmd(visible,false))(Subtitle); \
+		(cmd(zoom,0.55;maxwidth,550;y,15;x,-155;strokecolor,color("#000000");diffusealpha,0.5;))(Artist); \
+	else \
+		(cmd(zoom,0.7;maxwidth,450;y,-14;x,-155;strokecolor,color("#000000")))(Title); \
+		(cmd(visible,true;zoom,0.35;y,2.5;maxwidth,SCREEN_WIDTH*0.40;x,-155;strokecolor,color("#000000");diffusealpha,0.5;))(Subtitle); \
+		(cmd(zoom,0.5;maxwidth,500;y,18;x,-155;strokecolor,color("#000000");diffusealpha,0.5;))(Artist); \
 	end \
-end
-RandomOnCommand=diffuseshift;effectcolor1,color("1,1,1,1");effectcolor2,color("#88EEFF");effectperiod,10;shadowlength,2
+end;
 
-WheelNotifyIconOnCommand=visible,false
+[TextBannerCourse]
+TitleOnCommand=horizalign,left
+SubtitleOnCommand=horizalign,left
+ArtistOnCommand=horizalign,left
+ArtistPrependString=""
+AfterSetCommand=%function(self) \
+	local Title=self:GetChild("Title"); \
+	local Subtitle=self:GetChild("Subtitle"); \
+	local Artist=self:GetChild("Artist"); \
+	if Subtitle:GetText() == "" then \
+		(cmd(zoom,1.1;x,-220;maxwidth,340;y,-11))(Title); \
+		(cmd(visible,false))(Subtitle); \
+		(cmd(zoom,0.75;maxwidth,500;y,13;x,-220))(Artist); \
+	else \
+		(cmd(zoom,0.9;x,-220;maxwidth,340;y,-13))(Title); \
+		(cmd(visible,true;zoom,0.5;y,4;maxwidth,500;x,-220))(Subtitle); \
+		(cmd(zoom,0.6;maxwidth,500;y,18;x,-220))(Artist); \
+	end \
+end;
 
-GradeP1X=WideScale(38,50)
-GradeP1Y=-0
-GradeP2X=WideScale(54,80)
-GradeP2Y=0
-GradesShowMachine=false
+[BitmapText]
+# The colors in the 'roulette' text. you can have a lot!
+NumRainbowColors=7
+RainbowColor1=color("0.95,0.81,0.81,1")	-- red
+RainbowColor2=color("0.95,0.82,0.95,1")	-- pink
+RainbowColor3=color("0.87,0.82,0.95,1")	-- purple
+RainbowColor4=color("0.82,0.88,0.95,1")	-- sky blue
+RainbowColor5=color("0.82,0.95,0.88,1")	-- sea green
+RainbowColor6=color("0.87,0.95,0.82,1")	-- green
+RainbowColor7=color("1.00,0.85,0.78,1")	-- orange
 
 [TimingData]
 GetReturnsNumbers=true
-
-[TextBanner]
-TitleOnCommand=halign,0;x,WideScale(75, 111);maxwidth,WideScale(245,350);zoom,0.85
-SubtitleOnCommand=halign,0;x,WideScale(75, 111);maxwidth,WideScale(245,350);zoom,0.7
-ArtistOnCommand=visible,false
-AfterSetCommand=%TextBannerAfterSet
 
 
 [FadingBanner]
@@ -1652,8 +1725,9 @@ StageDisplayOffCommand=linear,0.05;zoomy,0;
 
 # wheel
 MusicWheelX=_screen.cx
-MusicWheelY=_screen.cy
-MusicWheelOffCommand=linear,0.2;diffusealpha,0;
+MusicWheelY=SCREEN_CENTER_Y
+MusicWheelOnCommand=wag;effectmagnitude,2,0,0;effecttiming,9,0,9,0;draworder,1;zoom,2.2;fov,80;vanishpoint,1200,SCREEN_CENTER_Y;x,SCREEN_CENTER_X+700;rotationy,10;diffusealpha,0;decelerate,0.8;diffusealpha,1;x,SCREEN_CENTER_X+370;
+MusicWheelOffCommand=decelerate,0.5;diffusealpha,0;x,SCREEN_CENTER_X+900;
 
 MusicWheelCodeMessageCommand=%function(self, params) \
 	if not GAMESTATE:IsCourseMode() and (params.Name:match("SortList")) then \
