Perspective; font tweaks

--- a/metrics.ini
+++ b/metrics.ini
@@ -1524,9 +1524,6 @@ ItemTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 			return 1; \
 		end; \
 	end; \
-	function GetDistence(offsetFromCenter) \
-			return 0; \
-	end; \
 	local curve = 2.5; \
 	local WHEEL_3D_RADIUS = 220; \
 	local rotationx_radians = scale(offsetFromCenter,-numItems/2,numItems/2,-curve/2,curve/2); \
@@ -1713,9 +1710,21 @@ SampleMusicLoops=SL.Global.SampleMusicLoop
 SampleMusicFallbackFadeInSeconds=1.5
 DoRouletteOnMenuTimer=false
 
-BannerX=0
-BannerY=0
-BannerOnCommand=scaletoclipped,418,164;visible,false;
+BannerX=SCREEN_CENTER_X
+BannerY=SCREEN_TOP-100
+BannerOnCommand=draworder,-1;scaletoclipped,80,80;visible,true;ztest,1;addy,-SCREEN_CENTER_Y;decelerate,0.35;addy,SCREEN_CENTER_Y
+BannerOffCommand=bouncebegin,0.15;zoomx,0;
+#
+ShowBannerFrame=true
+BannerFrameX=SCREEN_CENTER_X
+BannerFrameY=SCREEN_CENTER_Y+16-91
+BannerFrameOnCommand=zoom,0.83;draworder,2
+BannerFrameOffCommand=linear,0.15;zoom,0
+
+ArtistDisplayX=SCREEN_CENTER_X-11
+ArtistDisplayY=SCREEN_CENTER_Y-25
+ArtistDisplayOnCommand=zoom,0.9;visible,true
+ArtistDisplayOffCommand=
 
 HeaderOnCommand=draworder,101
 FooterOnCommand=draworder,101
@@ -1727,10 +1736,10 @@ StageDisplayOnCommand=skewx,-0.125;draworder,105;fov,90;zoom,0.75
 StageDisplayOffCommand=linear,0.05;zoomy,0;
 
 # wheel
-MusicWheelX=_screen.cx
 MusicWheelY=SCREEN_CENTER_Y
-MusicWheelOnCommand=wag;effectmagnitude,2,0,0;effecttiming,9,0,9,0;draworder,1;zoom,2.2;fov,80;vanishpoint,1200,SCREEN_CENTER_Y;x,SCREEN_CENTER_X+700;rotationy,10;diffusealpha,0;decelerate,0.8;diffusealpha,1;x,SCREEN_CENTER_X+370;
+MusicWheelOnCommand=wag;effectmagnitude,2,0,0;effecttiming,9,0,9,0;draworder,1;zoom,1.46;fov,80;vanishpoint,800,SCREEN_CENTER_Y;x,SCREEN_CENTER_X+700;rotationy,10;diffusealpha,0;decelerate,0.8;diffusealpha,1;x,SCREEN_CENTER_X+250;
 MusicWheelOffCommand=decelerate,0.5;diffusealpha,0;x,SCREEN_CENTER_X+900;
+
 
 MusicWheelCodeMessageCommand=%function(self, params) \
 	if not GAMESTATE:IsCourseMode() and (params.Name:match("SortList")) then \
@@ -1782,6 +1791,49 @@ DifficultyListP2TweenOnCommand=stoptweening
 DifficultyListP2TweenOffCommand=stoptweening
 
 #
+#
+ShowPaneDisplayFrameP1=not GAMESTATE:IsCourseMode() and GAMESTATE:IsHumanPlayer(PLAYER_1)
+PaneDisplayFrameP1X=SCREEN_CENTER_X
+PaneDisplayFrameP1Y=SCREEN_CENTER_Y
+PaneDisplayFrameP1OnCommand=player,PLAYER_1
+PaneDisplayFrameP1OffCommand=sleep,0.233;linear,0.05;diffusealpha,0
+PaneDisplayFrameP1PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_1 then self:playcommand("On") end end
+#
+ShowPaneDisplayTextP1=true
+PaneDisplayTextP1X=SCREEN_LEFT+175
+PaneDisplayTextP1Y=SCREEN_CENTER_Y-108+12
+PaneDisplayTextP1OnCommand=player,PLAYER_1;draworder,999;zoom,0.9
+PaneDisplayTextP1OffCommand=bouncebegin,0.15;zoomx,0;
+PaneDisplayTextP1PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_1 then self:playcommand("On") end end
+
+ShowPaneDisplayTextAP1=true
+PaneDisplayTextAP1X=SCREEN_RIGHT-175-119
+PaneDisplayTextAP1Y=SCREEN_CENTER_Y-108+12
+PaneDisplayTextAP1OnCommand=player,PLAYER_1;draworder,999;zoom,0.9
+PaneDisplayTextAP1OffCommand=bouncebegin,0.15;zoomx,0;
+PaneDisplayTextAP1PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_1 then self:playcommand("On") end end
+#
+ShowPaneDisplayFrameP2=not GAMESTATE:IsCourseMode() and GAMESTATE:IsHumanPlayer(PLAYER_2)
+PaneDisplayFrameP2X=SCREEN_RIGHT-175
+PaneDisplayFrameP2Y=SCREEN_CENTER_Y
+PaneDisplayFrameP2OnCommand=player,PLAYER_2
+PaneDisplayFrameP2OffCommand=sleep,0.233;linear,0.05;diffusealpha,0
+PaneDisplayFrameP2PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_2 then self:playcommand("On") end end
+#
+ShowPaneDisplayTextP2=true
+PaneDisplayTextP2X=SCREEN_RIGHT-175-119
+PaneDisplayTextP2Y=SCREEN_CENTER_Y-108+12
+PaneDisplayTextP2OnCommand=player,PLAYER_2;draworder,999;zoom,0.9
+PaneDisplayTextP2OffCommand=bouncebegin,0.15;zoomx,0;
+PaneDisplayTextP2PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_2 then self:playcommand("On") end end
+
+ShowPaneDisplayTextAP2=true
+PaneDisplayTextAP2X=SCREEN_LEFT+175
+PaneDisplayTextAP2Y=SCREEN_CENTER_Y-108+12
+PaneDisplayTextAP2OnCommand=player,PLAYER_2;draworder,999;zoom,0.9
+PaneDisplayTextAP2OffCommand=bouncebegin,0.15;zoomx,0;
+PaneDisplayTextAP2PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_2 then self:playcommand("On") end end
+#
 #¦Û³Ðªºshock arrowªí¥Ü¹Ï¥Ü
 ShowShockArrowDisplayP1=true
 ShockArrowDisplayP1X=
@@ -1796,6 +1848,85 @@ ShockArrowDisplayP2OnCommand=player,PLAYER_2;draworder,100;zoom,0;decelerate,0.2
 ShockArrowDisplayP2OffCommand=decelerate,0.2;zoom,0;
 ShockArrowDisplayP2PlayerJoinedMessageCommand=%function(self,params) if params.Player == PLAYER_2 then self:playcommand("On") end end
 #
+ShowCourseContentsList=false
+CourseContentsListX=SCREEN_CENTER_X-160
+CourseContentsListY=SCREEN_TOP+216+6
+CourseContentsListOnCommand=addx,-SCREEN_CENTER_X;decelerate,0.35;addx,SCREEN_CENTER_X
+CourseContentsListOffCommand=bouncebegin,0.15;zoomx,0;
+
+ShowCourseContentsMyListP1=true
+CourseContentsMyListP1X=SCREEN_LEFT+175
+CourseContentsMyListP1Y=SCREEN_CENTER_Y-90-15-100
+CourseContentsMyListP1OnCommand=
+CourseContentsMyListP1OffCommand=linear,0.15;addx,-500
+ShowCourseContentsMyListP2=true
+CourseContentsMyListP2X=SCREEN_RIGHT-175
+CourseContentsMyListP2Y=SCREEN_CENTER_Y-90-15-100
+CourseContentsMyListP2OnCommand=
+CourseContentsMyListP2OffCommand=linear,0.15;addx,500
+#
+ShowCourseContentsMyListAP1=true
+CourseContentsMyListAP1X=SCREEN_RIGHT-175
+CourseContentsMyListAP1Y=SCREEN_CENTER_Y-90-15-100
+CourseContentsMyListAP1OnCommand=
+CourseContentsMyListAP1OffCommand=linear,0.15;addx,-500
+ShowCourseContentsMyListAP2=true
+CourseContentsMyListAP2X=SCREEN_LEFT+175
+CourseContentsMyListAP2Y=SCREEN_CENTER_Y-90-15-100
+CourseContentsMyListAP2OnCommand=
+CourseContentsMyListAP2OffCommand=linear,0.15;addx,500
+#
+
+ShowNumCourseSongs=GAMESTATE:IsCourseMode()
+NumCourseSongsX=SCREEN_CENTER_X+300
+NumCourseSongsY=SCREEN_TOP+70
+NumCourseSongsOnCommand=zoom,0.55;strokecolor,Color("Outline");shadowlengthy,2
+NumCourseSongsOffCommand=bouncebegin,0.15;zoom,0;diffusealpha,0;
+#
+CDTitleX=SCREEN_CENTER_X-160+90
+CDTitleY=SCREEN_TOP+160+(36/2)+8-5000
+CDTitleFrontCommand=diffuse,color('0.5,0.5,0.5,1');cullmode,'CullMode_Front'
+CDTitleBackCommand=cullmode,'CullMode_Back'
+CDTitleOnCommand=draworder,106;shadowlengthy,2;zoom,0.75;diffusealpha,1;zoom,0;bounceend,0.35;zoom,0.75;spin;effectmagnitude,0,180,0;
+CDTitleOffCommand=bouncebegin,0.15;zoomx,0;
+
+#
+#
+#
+ScoreP1SortChangeCommand=stoptweening;
+ScoreP2SortChangeCommand=stoptweening;
+ScoreFrameP1SortChangeCommand=stoptweening;
+ScoreFrameP2SortChangeCommand=stoptweening;
+#
+#³æ¤@Ãø«×¡]¥Ø«e?EÜªº¡^ªúÁÜ \BGAnimations\ScreenSelectMusic decorations\default.lua
+ShowStepsDisplayP1=GAMESTATE:IsHumanPlayer(PLAYER_1)
+StepsDisplayP1X=SCREEN_CENTER_X-270
+StepsDisplayP1Y=SCREEN_CENTER_Y-200
+StepsDisplayP1OnCommand=zoom,0.7;diffusealpha,0;draworder,99;visible,GAMESTATE:IsHumanPlayer(PLAYER_1)
+StepsDisplayP1OffCommand=bouncebegin,0.15;zoomx,0;
+# StepsDisplayP1CurrentStepsP1ChangedMessageCommand=stoptweening;zoom,1.2;decelerate,0.1;zoom,1
+#
+ShowStepsDisplayP2=GAMESTATE:IsHumanPlayer(PLAYER_2)
+StepsDisplayP2X=SCREEN_CENTER_X+270
+StepsDisplayP2Y=SCREEN_CENTER_Y-200
+StepsDisplayP2OnCommand=zoom,0.7;diffusealpha,0;draworder,99;visible,GAMESTATE:IsHumanPlayer(PLAYER_2)
+StepsDisplayP2OffCommand=bouncebegin,0.15;zoomx,0;
+# StepsDisplayP2CurrentStepsP2ChangedMessageCommand=stoptweening;zoom,1.2;decelerate,0.1;zoom,1
+#
+#³æ¤@Ãø«×¡]¥Ø«e?EÜªº¡^§¹¦¨¦Ê¤À¤ñªúÁÜ \BGAnimations\ScreenSelectMusic decorations\default.lua
+ShowPercentScoreP1=true
+PercentScoreP1X=SCREEN_CENTER_X-80-1
+PercentScoreP1Y=SCREEN_BOTTOM+40
+PercentScoreP1OnCommand=player,PLAYER_1;addy,SCREEN_CENTER_Y;decelerate,0.35;addy,-SCREEN_CENTER_Y
+PercentScoreP1OffCommand=bouncebegin,0.15;zoomx,0;
+#
+ShowPercentScoreP2=true
+PercentScoreP2X=SCREEN_CENTER_X+240-1
+PercentScoreP2Y=SCREEN_BOTTOM+40
+PercentScoreP2OnCommand=player,PLAYER_2;addy,SCREEN_CENTER_Y;decelerate,0.35;addy,-SCREEN_CENTER_Y
+PercentScoreP2OffCommand=bouncebegin,0.15;zoomx,0;
+
+
 
 
 
