--- a/metrics.ini
+++ b/metrics.ini
@@ -2367,19 +2367,8 @@ GradePercentTier16=0.55
 GradePercentTier17=-999
 
 [SongManager]
-NumSongGroupColors=12
-SongGroupColor1=GetHexColor(1)
-SongGroupColor2=GetHexColor(2)
-SongGroupColor3=GetHexColor(3)
-SongGroupColor4=GetHexColor(4)
-SongGroupColor5=GetHexColor(5)
-SongGroupColor6=GetHexColor(6)
-SongGroupColor7=GetHexColor(7)
-SongGroupColor8=GetHexColor(8)
-SongGroupColor9=GetHexColor(9)
-SongGroupColor10=GetHexColor(10)
-SongGroupColor11=GetHexColor(11)
-SongGroupColor12=GetHexColor(12)
+NumSongGroupColors=1
+SongGroupColor1=color("#ffffff") --default white
 
 NumCourseGroupColors=1
 CourseGroupColor1=Color.White
