--- a/metrics.ini
+++ b/metrics.ini
@@ -1570,7 +1570,7 @@ IconOnCommand=
 SectionCountX=-245
 SectionExpandedOnCommand=x,-195;addy,1.5;maxwidth,SCREEN_WIDTH*0.35;horizalign,left;shadowlengthy,2;zoom,0.9;
 SectionCollapsedOnCommand=x,-195;addy,1.5;maxwidth,SCREEN_WIDTH*0.35;horizalign,left;shadowlengthy,2;zoom,0.9;
-SectionCountOnCommand=zoom,0.3;addy,12;addx,19;shadowlengthy,2;diffusealpha,0.5;horizalign,right;
+SectionCountOnCommand=zoom,0;
 #
 WheelNotifyIconX=-245
 WheelNotifyIconY=0
@@ -1588,6 +1588,8 @@ GradeP1X=-196
 GradeP1Y=-14
 GradeP2X=-196
 GradeP2Y=14
+GradeP1OnCommand=zoom,0;
+GradeP2OnCommand=zoom,0;
 
 CourseX=-210
 CourseOnCommand=zoom,1.0;horizalign,left;shadowlengthy,2;maxwidth,SCREEN_WIDTH*0.31
