--- a/ThemeInfo.ini
+++ b/ThemeInfo.ini
@@ -1,4 +1,4 @@
 [ThemeInfo]
-DisplayName=Simply Love
-Author=
+DisplayName=Simply Love NX
+Author=JeffreyATW
 Version=5.3.0 for ITGmania - 20231024 zmod
