--- a/metrics.ini
+++ b/metrics.ini
@@ -1765,7 +1765,7 @@ SongTimeMarathonCommand=diffuse,Color("Orange");diffusebottomedge,Color("Red");
 ShowBPMDisplay=true
 BPMDisplayX=SCREEN_CENTER_X+222
 BPMDisplayY=SCREEN_CENTER_Y-25
-BPMDisplayOnCommand=
+BPMDisplayOnCommand=shadowlengthy,2
 #BPMDisplayOffCommand=linear,0.25;diffusealpha,0;
 #OffCommand defined in ScreenSelectMusic decorations
 #
